log/build_2025-10-09_15-57-10/tortoisebot_gazebo/stderr.log
  File "/home/arz-1017/task/task_ws/install/tortoisebot_gazebo/lib/python3.12/site-packages/tortoisebot_gazebo/laserdata.py", line 3
    from sensor_msgs/LaserScan.msg import LaserScan
                    ^
SyntaxError: invalid syntax

